Resolves: tdf#141033 make combobox max width the same as editboxes

i.e. 30 chars wide, otherwise a long table name will stretch the
page too wide to be useful

Change-Id: I65151e864f178de0236cb35d133830c8bca95b9f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189808
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 9fc99321c11202aa92fe6b932c5afd38ffe81e31)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189843
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>